<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_otf_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:text="@string/otf_instruction" />
<TextView
        android:id="@+id/tv_otf_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/otf_gender" />
    
    <RadioGroup
        android:id="@+id/rdg_otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rdo_otf_girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="@android:color/white"
            android:text="@string/girl" />

        <RadioButton
            android:id="@+id/rdo_otf_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/boy" />

        
    </RadioGroup>

    <TextView
        android:id="@+id/tv_otf_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/otf_age" />

    <EditText
        android:id="@+id/et_otf_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_otf_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/otf_weight" />

    <EditText
        android:id="@+id/et_otf_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_otf_height"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/otf_height" />

    <EditText
        android:id="@+id/et_otf_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_otf_measure"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_measure" />

        <Button
            android:id="@+id/btn_otf_reset"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset" />

        <Button
            android:id="@+id/btn_otf_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>