<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_bbm_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:textColor="@android:color/white"
		android:textSize="17sp"
        android:text="@string/bbm_instruction" />

    <TextView
        android:id="@+id/tv_bbm_mother_weight_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:text="@string/mother_three_month_weight" />

    <EditText
        android:id="@+id/et_bbm_mother_weight_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_bbm_mother_weight_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/mother_present_weight" />

    <EditText
        android:id="@+id/et_bbm_mother_weight_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_bbm_running_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/running_month" />

    <EditText
        android:id="@+id/et_bbm_running_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_bbm_measure"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_measure" />

        <Button
            android:id="@+id/btn_bbm_reset"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset" />

        <Button
            android:id="@+id/btn_bbm_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>