<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NutritionMesureTab" >

    <TextView
        android:id="@+id/tv_nm_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_nm_name"
        android:layout_below="@+id/tv_nm_name"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_nmt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/otf_weight" />

        <EditText
            android:id="@+id/et_nmt_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_nmt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/otf_height" />

        <EditText
            android:id="@+id/et_nmt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="numberDecimal" />
	<TextView
            android:id="@+id/tv_nmt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/date" />

        <EditText
            android:id="@+id/et_nmt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="date" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_nmt_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_measure" />

            <Button
                android:id="@+id/btn_nmt_reset"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset" />

            <Button
                android:id="@+id/btn_nmt_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>