<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/tv_cht_name_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textColor="@android:color/white"
            android:text="@string/nch_name" />
        <TextView
            android:id="@+id/tv_cht_fname_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/chl_fname" />

        
        <TextView
            android:id="@+id/tv_cht_mname_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/chl_mname" />
        <TextView
            android:id="@+id/tv_cht_bdate_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/nch_bdate" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_cht_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="Name" />

        <TextView
            android:id="@+id/tv_cht_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Father" />
       
        
        <TextView
            android:id="@+id/tv_cht_mname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Mother" />

        
        <TextView
            android:id="@+id/tv_cht_bdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Birth" />

            </LinearLayout>
</LinearLayout>

    <TableLayout
        android:id="@+id/measure_info_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

     </TableLayout>

</LinearLayout>